# PhotoPhenosizer

./: 522_1_1.tif  GUI_to_test_configs.py  README.md  Usage_Example.md  config 2.ini  config.ini  config.py  exampleConfig.ini  make_directories.py  ppGUI.py  pp_config.py  process_images.py  sample_gui.py
Results 10-12-2022 204718/: 522_1_1.csv  522_T_1_3.csv
Results 10-12-2022 204718/area_filtered_masks/: 522_1_1-area_filtered.tif  522_T_1_3-area_filtered.tif
Results 10-12-2022 204718/nn_masks/: 522_1_1-nn_mask.tif  522_T_1_3-nn_mask.tif
Results 10-12-2022 204718/threshold_masks/: 522_1_1-threshold.tif  (+1 more)
code/: config.ini  config_for_first_window.py  create_kickoff_again.py  kickoff_window.py  make_directories.py  ppGUI.py  pp_config.py  process_images.py  run_process_images.py  sample_gui.py  second_window.py  user_project_directory.txt  variable_support.py  weaving_it_together.py
photophenosizer_gui/: README.md  __init__.py  config_for_first_window.py  kickoff_window.py  make_directories.py  project_directory_config.ini  pyproject.toml  run_process_images.py  second_window.py  setup.py
photophenosizer_gui/gui_images.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
photophenosizer_gui/src/photophenosizer_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
photophenosizer_gui/src/project/: __init__.py  __main__.py  make_directories.py  pp_config.py  process_images.py  run_process_images.py  second_window.py  selecting_project_directory_window.py
photophenosizer_gui/src/project/data/: data1.txt
project_dir_2/: config.ini
(+12 files in other folders)
